<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/heading"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/caseReportBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/case_report" />

    <Button
        android:id="@+id/responsesBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/response" />

    <Button
        android:id="@+id/caseListBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/case_list" />

    <Button
        android:id="@+id/settingsBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings" />

    <TextView
        android:id="@+id/textView2"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/footer"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>
